add featured supervise, no feature adaptive

--- a/DicMake.ipynb
+++ b/DicMake.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,12 @@
     "orgDic = defaultdict(int)\n",
     "miscDic = defaultdict(int)\n",
     "\n",
-    "sentences1 = readfile(\"data/twitter/train.txt\")\n",
-    "sentences2 = readfile(\"data/twitter/valid.txt\")\n",
-    "sentences3 = readfile(\"data/twitter/test.txt\")"
+    "sentences1 = readfile(\"data/twitter/train.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,18 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "addDic(sentences1,personDic,locDic,orgDic,miscDic)\n",
-    "addDic(sentences2,personDic,locDic,orgDic,miscDic)\n",
-    "addDic(sentences3,personDic,locDic,orgDic,miscDic)"
+    "# addDic(sentences2,personDic,locDic,orgDic,miscDic)\n",
+    "# addDic(sentences3,personDic,locDic,orgDic,miscDic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -436,29 +434,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "with open(\"dictionary/twitter/person2.txt\",\"w\") as fw:\n",
-    "    for name in pset:\n",
-    "        fw.write(name+\"\\n\")\n",
-    "with open(\"dictionary/twitter/location2.txt\",\"w\") as fw:\n",
-    "    for name in lset:\n",
-    "        fw.write(name+\"\\n\")\n",
+    "# with open(\"dictionary/twitter/person2.txt\",\"w\") as fw:\n",
+    "#     for name in pset:\n",
+    "#         fw.write(name+\"\\n\")\n",
+    "# with open(\"dictionary/twitter/location2.txt\",\"w\") as fw:\n",
+    "#     for name in lset:\n",
+    "#         fw.write(name+\"\\n\")\n",
     "with open(\"dictionary/twitter/organization2.txt\",\"w\") as fw:\n",
     "    for name in oset:\n",
     "        fw.write(name+\"\\n\")\n",
-    "with open(\"dictionary/twitter/misc2.txt\",\"w\") as fw:\n",
-    "    for name in mset:\n",
-    "        fw.write(name+\"\\n\")"
+    "# with open(\"dictionary/twitter/misc2.txt\",\"w\") as fw:\n",
+    "#     for name in mset:\n",
+    "#         fw.write(name+\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,58 +465,58 @@
     "personDic = defaultdict(int)\n",
     "locDic = defaultdict(int)\n",
     "\n",
-    "with open(\"dictionary/twitter/organization.txt\",\"r\") as fw:\n",
-    "    for line in fw:\n",
-    "        line = line.strip()\n",
-    "        orgDic[line]+=1\n",
-    "with open(\"dictionary/twitter/misc.txt\",\"r\") as fw:\n",
+    "# with open(\"dictionary/twitter/organization.txt\",\"r\") as fw:\n",
+    "#     for line in fw:\n",
+    "#         line = line.strip()\n",
+    "#         orgDic[line]+=1\n",
+    "# # with open(\"dictionary/twitter/misc.txt\",\"r\") as fw:\n",
+    "# #     for line in fw:\n",
+    "# #         line = line.strip()\n",
+    "# #         miscDic[line]+=1\n",
+    "        \n",
+    "# with open(\"dictionary/twitter/person.txt\",\"r\") as fw:\n",
+    "#     for line in fw:\n",
+    "#         line = line.strip()\n",
+    "#         personDic[line]+=1\n",
+    "        \n",
+    "# with open(\"dictionary/twitter/location.txt\",\"r\") as fw:\n",
+    "#     for line in fw:\n",
+    "#         line = line.strip()\n",
+    "#         locDic[line]+=1\n",
+    "        \n",
+    "# with open(\"dictionary/twitter/organization2.txt\",\"r\") as fw:\n",
+    "#     for line in fw:\n",
+    "#         line = line.strip()\n",
+    "#         orgDic[line]+=1\n",
+    "with open(\"dictionary/conll2003/misc.txt\",\"r\") as fw:\n",
     "    for line in fw:\n",
     "        line = line.strip()\n",
     "        miscDic[line]+=1\n",
     "        \n",
-    "with open(\"dictionary/twitter/person.txt\",\"r\") as fw:\n",
-    "    for line in fw:\n",
-    "        line = line.strip()\n",
-    "        personDic[line]+=1\n",
+    "# with open(\"dictionary/twitter/person2.txt\",\"r\") as fw:\n",
+    "#     for line in fw:\n",
+    "#         line = line.strip()\n",
+    "#         personDic[line]+=1\n",
     "        \n",
-    "with open(\"dictionary/twitter/location.txt\",\"r\") as fw:\n",
-    "    for line in fw:\n",
-    "        line = line.strip()\n",
-    "        locDic[line]+=1\n",
-    "        \n",
-    "with open(\"dictionary/twitter/organization2.txt\",\"r\") as fw:\n",
-    "    for line in fw:\n",
-    "        line = line.strip()\n",
-    "        orgDic[line]+=1\n",
-    "with open(\"dictionary/twitter/misc2.txt\",\"r\") as fw:\n",
-    "    for line in fw:\n",
-    "        line = line.strip()\n",
-    "        miscDic[line]+=1\n",
-    "        \n",
-    "with open(\"dictionary/twitter/person2.txt\",\"r\") as fw:\n",
-    "    for line in fw:\n",
-    "        line = line.strip()\n",
-    "        personDic[line]+=1\n",
-    "        \n",
-    "with open(\"dictionary/twitter/location2.txt\",\"r\") as fw:\n",
-    "    for line in fw:\n",
-    "        line = line.strip()\n",
-    "        locDic[line]+=1\n",
+    "# with open(\"dictionary/twitter/location2.txt\",\"r\") as fw:\n",
+    "#     for line in fw:\n",
+    "#         line = line.strip()\n",
+    "#         locDic[line]+=1\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "357\n",
-      "342\n",
-      "{'Serbian', 'Selma', 'Antarctic', 'Mahoran', 'Mongolian', 'Austrian', 'Islamist', 'Czech', 'Swazi', 'Algerian', 'iPhone', 'Olympics', 'Grammys', 'Tunisian', 'Palauan', 'Thai', 'Bonaire', 'Papua New Guinean', '#tahoe', 'Herzegovinian', 'Ebola', 'Vikings', 'The', 'Gabonese', 'Caymanian', 'Kittitian', '#LLWS', 'Maggie Simpson', 'Jordanian', 'PS4', 'Macanese', 'Finnish', 'Sahraouian', 'Iranian', 'iPod', 'Slovenian', 'Egyptian', 'Motswana', 'Abkhaz', 'Laotian', 'Oscar', 'Android', 'Sri Lankan', 'Singapore', 'Comorian', 'Nepalese', 'The Breakfast Club', 'Saudi', 'Tokelauan', 'Ferrari', '#Ebola', 'Kirghiz', 'Guinean', 'Zambian', 'The Seth Leibsohn Show', 'Jan Mayen', 'Belizean', 'Waze', 'Niuean', 'Monégasque', 'World War I', '#Twitter', 'Comoran', 'Dominican', 'Congolese', 'Kazakhstani', 'Harry Potter', 'Qatari', 'Memorial Day', 'Saint Lucian', 'Kardashians', 'Djiboutian', 'Malinese', 'Daryl', '#Lolla', 'Emiri', 'Belarusian', 'Manx', 'Maltese', 'Swedish', '#Christmas', 'Greek', 'Heard Island', 'Sammarinese', 'Palestinian', 'Luxembourgish', 'Faroese', 'Adjectivals', 'Mozambican', '#VMAs', 'Beninese', 'Rwandan', 'Cypriot', 'Star Wars', 'Slovene', 'Omani', 'Instagram', 'Tajikistani', 'Lombardi Trophy', 'Tanzanian', 'Emirati', '5lb Hershey bar', 'Burmese', 'Bosnian', '#LDS', 'Barbudan', 'Pakistani', 'Surinamese', 'Namibian', 'Basotho', 'Vatican', 'Game of Thrones', 'Pinterest', 'Eritrean', 'Georgian', 'Grenadian', 'Vincentian', 'Flash Flood Warning', 'European', 'AIDS', 'MERS', 'Tuvaluan', 'Yemeni', 'NFL', 'BIOT', 'Equatoguinean', 'Luxembourg', 'MBA', 'Sahrawian', 'Spike', 'Bahamian', 'Swiss', 'Olympic', '#NYE', 'Miquelonnais', 'Papuan', 'Anguillan', 'iCloud', 'South African', 'Microsoft Exchange', 'Kyrgyzstani', 'American Samoan', 'Iraqi', 'PSPA competition', 'Monacan', 'Martinican', 'Mickey Mouse', 'FT', 'Sint Maarten', 'Hellenic', 'Bhutanese', '#Hipstamatic', 'New Years', 'Burundian', 'Antiguan', 'Persian', 'Magyar', 'Frozen', 'Lebanese', 'Azeri', 'Angolan', 'Impala', 'Turkmen', 'Data Lake', 'Macedonian', 'Fifty Shades of Grey', 'Micronesian', 'Mary Poppins', 'Afghan', 'Mauritanian', 'Saba', 'Israeli', 'Martiniquais', 'Togolese', 'Bahraini', 'Eurovision', 'Fox News', 'Bouvet Island', 'FaceTime', 'Halloween', 'Futunan', 'Liberian', 'Vanuatuan', 'Jamaican', 'Orion', 'Chadian', 'Starbucks Card', 'WhatsApp', 'Saint-Martinoise', 'Azerbaijani', 'Guyanese', 'Ecuadorian', 'Ugandan', 'Armenian', 'EST', 'Venezuelan', 'Nepali', 'Kosovar', 'Vietnamese', 'Disney', 'THE BEST YEARS OF OUR LIVES', 'iTunes', '#CGE', 'Grand Prix', 'Labor Day', 'SAP Web IDE', 'Malaysian', 'Moroccan', 'Moldovan', 'Guadeloupe', 'CO2', '#Pashto', 'Malawian', 'New Year', 'Andorran', 'North Korean', 'Siri', 'Danish', 'Obamacare', 'Cook Island', 'Bolivian', 'Réunionnais', 'Svalbard', '#hpmkt', 'Emirian', 'Greenlandic', 'Kuwaiti', 'Maldivian', '#F1', 'Nigerien', 'Samoan', 'Sahrawi', 'Netherlandic', 'Cambodian', 'Polish', 'HIV', 'Stanley Cup', 'Ivorian', 'Texworld Paris', 'grammy', 'Gambian', 'Cameroonian', 'Chilean', 'Estonian', 'TVD', 'Fijian', 'Burkinabé', 'Thanksgiving', 'Kosovan', 'Air Jordan', 'Kazakh', 'Jurassic World', 'Libyan', 'Twitter', 'South Sudanese', 'Albanian', 'Singaporean', 'Seychellois', 'Uzbekistani', 'Taiwanese', 'Windows 10', 'Montserratian', 'FIELD TRIP FRIDAY', 'Pi Day', 'American Sniper', 'Chinese', 'FBS', '#Poldark', 'Curaçaoan', 'Somali', 'Sudanese', 'South Georgia', 'Abkhazian', 'Sugar Bowl', 'Lithuanian', '#Mormon', 'Statian', 'Botswanan', 'Tongan', 'Japanese', 'Indonesian', '#Howard', 'Guamanian', 'Bruneian', 'World Cup', 'Kyrgyz', 'Teen Wolf', 'Final Dress Rehearsal of MACBETH', 'Hungarian', 'Coco', 'Dutch', '#Catholic', 'MTV VMAs', 'Somalilander', 'NBA', 'Kirgiz', 'Malian', 'Independence Day', 'Italian', 'Boston Marathon', 'Cabo Verdean', 'soap opera', 'Marshallese', 'the', 'Pluto', 'Wallisian', 'Uzbek', 'Batman', '#Facebook', 'Nauruan', '#Easter', '#Arquitectura', 'Earth Day', 'Bulgarian', 'weibo', 'British', 'Ghostbusters', 'Malagasy', 'Aruban', 'Minecraft', 'Ghanaian', '#Vikings', 'iPad', 'WWII', 'Scottish', 'Lion King', 'Latvian', 'Central African', 'Christmas', 'Croatian', 'Ethiopian', 'Mauritian', 'Oscars', 'Icelandic', 'Google Maps', 'Kenyan', '#NFL', 'Turkish', 'Slovak', 'Xmas', 'Romanian', 'Montenegrin', '#LGBT', '#SDCC', 'Kursk', 'Fruitvale Station', 'Beninois', 'Senegalese', 'Belgian', 'Disney Channel', 'Lettish', 'Nevisian', 'Cuban', 'Norwegian', 'Syrian', 'ObamaCare', 'Confederate flag'}\n"
+      "0\n",
+      "0\n",
+      "set()\n"
      ]
     }
    ],
@@ -531,35 +529,35 @@
     "\n",
     "\n",
     "    \n",
-    "print(len(set4))\n",
+    "print(len(set3))\n",
     "    \n",
     "a = set1-set2-set3-set4\n",
     "b = set2-set1-set3-set4\n",
     "c = set3-set1-set2-set4\n",
     "d = set4-set1-set2-set3\n",
     "\n",
-    "print(len(d))\n",
+    "print(len(c))\n",
     "\n",
-    "print(set4)\n",
+    "print(set3)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"dictionary/twitter/person3.txt\",\"w\") as fw:\n",
-    "    for i in a:\n",
-    "        fw.write(i+\"\\n\")\n",
-    "with open(\"dictionary/twitter/location3.txt\",\"w\") as fw:\n",
-    "    for i in b:\n",
-    "        fw.write(i+\"\\n\")\n",
-    "with open(\"dictionary/twitter/organization3.txt\",\"w\") as fw:\n",
-    "    for i in c:\n",
-    "        fw.write(i+\"\\n\")\n",
-    "with open(\"dictionary/twitter/misc3.txt\",\"w\") as fw:\n",
+    "# with open(\"dictionary/twitter/person3.txt\",\"w\") as fw:\n",
+    "#     for i in a:\n",
+    "#         fw.write(i+\"\\n\")\n",
+    "# with open(\"dictionary/twitter/location3.txt\",\"w\") as fw:\n",
+    "#     for i in b:\n",
+    "#         fw.write(i+\"\\n\")\n",
+    "# with open(\"dictionary/twitter/organization3.txt\",\"w\") as fw:\n",
+    "#     for i in c:\n",
+    "#         fw.write(i+\"\\n\")\n",
+    "with open(\"dictionary/conll2003/misc3.txt\",\"w\") as fw:\n",
     "    for i in d:\n",
     "        fw.write(i+\"\\n\")\n"
    ]
